Add resolvedTypeInference for graphFetchChecked